Change name of package to be catchier.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ['setuptools>=61.0']
 build-backend = 'setuptools.build_meta'
 
 [project]
-name = 'scrtt'
+name = 'scotty-tools'
 version = '0.0.0'
 authors = [
     { name='Alec Plotkin', email='alp.plotkin@gmail.com' },
 ]
-description = 'Tools for downstream analysis of single-cell real-time trajectory models.'
+description = 'Tools for downstream analysis of single-cell optimal transport trajectory models.'
 readme = 'README.md'
 requires-python = '>=3.7'
 classifiers = [
@@ -25,5 +25,8 @@ dependencies = [
 ]
 
 [project.urls]
-'Homepage' = 'https://github.com/alecplotkin/scrtt'
-'Bug Tracker' = 'https://github.com/alecplotkin/scrtt/issues'
+'Homepage' = 'https://github.com/alecplotkin/scotty-tools'
+'Bug Tracker' = 'https://github.com/alecplotkin/scotty-tools/issues'
+
+[tool.setuptools.packages.find]
+where = ["src"]
